# aios-core

./: .claudeignore  .gitignore  ACTION_ITEMS.md  CLEANUP_SUMMARY.txt  CONTRIBUTING.md  GEMINI.md  email_batch_analyzer.js  email_cleanup_report.md  email_discovery.js  jest.config.js  package-lock.json  package.json
.aios/: claude-status.json  devops-setup-report.yaml  environment-report.json  navigator-agent-brief.md  navigator-squad-blueprint.yaml  project-registry.json  project-status.yaml  session-handoff.md  session.json  visual-context-system.md
.aios-core/: core-config.yaml  framework-config.yaml  install-manifest.yaml  project-config.yaml  user-guide.md  version.json
.aiox-core/: constitution.md  core-config.yaml  install-manifest.yaml  project-config.yaml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude-migration-backup-20260213-200843/: MANIFEST.txt
.gemini/: settings.json
.github/: SECRETS.md
.synapse/: guardrails  manifest
banners/: backtothefuture-banner.sh  donkeykong-banner.sh  dragonballz-banner.sh  mario-banner.sh  matrix-banner.sh  matrix-v2.sh  matrixrain-banner.sh  megaman-banner.sh  mortalkombat-banner.sh  pacman-banner.sh  pokemon-banner.sh  random-banner.sh  space-invaders-banner.sh  starwars-banner.sh  streetfighter-banner.sh  tetris-banner.sh
data/: project-pulse-preview.json
tools/cademi-downloader/: .cademi-cookies.json  .cademi-session-cache.json  .env-login  .env.example  README.md  cademi-download-status.json  dashboard.html  pyproject.toml  renan-transcription-status.json
tools/cademi-downloader/src/cademi_downloader/: __init__.py  __main__.py  auth.py  cli.py  config.py  console.py  exceptions.py  filesystem.py  http_client.py  logging_config.py  models.py  scraper.py
tools/cademi-downloader/src/cademi_downloader/downloader/: __init__.py  attachment.py  base.py  subtitle.py  text.py  video.py
tools/video-transcriber/: README.md  pyproject.toml
tools/video-transcriber/src/video_transcriber/: __init__.py  batch.py  captions.py  chapters.py  cli.py  config.py  glossary.py  obsidian.py  search.py  summarizer.py
(+3601 files in other folders)
